Modified the appearance of the 'Moringa' label on tha Nav bar

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <main>
         <div class="bar">
-            <a class="nav">Moringa School</a>
+            <a class="nav"><a class="mor">Moringa</a> School</a>
             <a class="cour">Courses</a>
             <a class="cour">Our Projects</a>
             <a class="cour">Stories</a>
