Added the first image of th ip

--- a/index.html
+++ b/index.html
@@ -10,12 +10,19 @@
 <body>
     <main>
         <div class="bar">
-            <a class="nav"><a class="mor">Moringa</a> School</a>
+            <a class="mor">Moringa</a> <a class="nav">School</a>
             <a class="cour">Courses</a>
             <a class="cour">Our Projects</a>
             <a class="cour">Stories</a>
             <button class="btn">Enroll</button>
         </div>
+        <P>
+            <div class="p1">
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Laboriosam recusandae consectetur labore, culpa, quas earum sit molestias magni iure facere adipisci similique fugiat ratione explicabo harum maxime minus animi quis?<img src="./assets/images/image 2.png"></p>
+
+            </div>
+        </P>
     </main>
+
 </body>
 </html>
