--- a/index.html
+++ b/index.html
@@ -8,21 +8,24 @@
     <link rel="stylesheet" type="text/css" href="./assets/css/style.css">
 </head>
 <body>
-    <main>
-        <div class="bar">
-            <a class="mor">Moringa</a> <a class="nav">School</a>
-            <a class="cour">Courses</a>
-            <a class="cour">Our Projects</a>
-            <a class="cour">Stories</a>
-            <button class="btn">Enroll</button>
-        </div>
-        <P>
-            <div class="p1">
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Laboriosam recusandae consectetur labore, culpa, quas earum sit molestias magni iure facere adipisci similique fugiat ratione explicabo harum maxime minus animi quis?<img src="./assets/images/image 2.png"></p>
-
-            </div>
-        </P>
-    </main>
-
+    <div class="bar">
+        <a class="mor">Moringa</a> <a class="nav">School</a>
+        <a class="cour">Courses</a>
+        <a class="cour">Our Projects</a>
+        <a class="cour">Stories</a>
+        <button class="btn">Enroll</button>
+    </div>
+    <div class="p1">
+        <h2>Moringa</h2>
+        <h1>Nurturing Africa's tech Talent</h1>
+        <p>Through market aligned skils training, we help learners build new career possibilities with greater confidence and capability </p>
+        <img class="img1" src="assets/images/image1.png" alt="IMG">
+        <br>
+        <button class="btn">Enroll Now</button>
+        <button class="btn">Explore</button>
+    </div>      
+    <div>
+        <p><a class="stor">Stories</a> So many memories</p>
+    </div>
 </body>
 </html>
