--- a/index.html
+++ b/index.html
@@ -18,14 +18,80 @@
     <div class="p1">
         <h2>Moringa</h2>
         <h1>Nurturing Africa's tech Talent</h1>
-        <p>Through market aligned skils training, we help learners build new career possibilities with greater confidence and capability </p>
+        <p>Through market aligned skils training, we help learners build new career possibilities with greater confidence and capability 
+            <button class="btn">Enroll Now</button>
+            <button class="btn">Explore</button>
+        </p>
         <img class="img1" src="assets/images/image1.png" alt="IMG">
         <br>
-        <button class="btn">Enroll Now</button>
-        <button class="btn">Explore</button>
-    </div>      
+    </div>
+    
+    <h4><a class="stor"><strong>Stories</strong></a> So many memories</h4>
     <div>
-        <p><a class="stor">Stories</a> So many memories</p>
+        <h1>Orientation day</h1>
+        <p>
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nam est purus, consectetur sit frin bot
+            <button class="btn">See Album</button>
+        </p>
+        <img class="img1" src="assets/images/image 2.png" alt="IMG">
+    </div>
+    <div>
+        <h1>Board Meeting</h1>
+        <p>
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nam est purus, consectetur sit frin bot
+            <button class="btn">Read our stories</button>
+        </p>
+        <img class="img1" src="assets/images/image 3.png" alt="IMG">
+    </div>
+    <br>
+    <div>
+        <img class="img1" src="assets/images/image 4.png" alt="IMG">
+        <h1>Graduation Party</h1>
+        <p>
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nam est purus, consectetur sit frin bot
+            <button class="btn">See Album</button>
+        </p>
+    </div>
+    <h4><a class="stor"><strong>Technical Mentors</strong></a> Skilled, and kind</h4>
+    <div>
+       <ul>
+           <div>
+               <img src="assets/images/image 5.png" alt="IMG">
+               <h3>Web development</h3>
+               <p>Lorem ipsum dolor sit amedgt consectetur adipiscing elit. Nm est purus, consectetur sit amet odio sed, umcorper aliquet tortor</p>
+               <button class="btn">Ask A Question</button>
+           </div>
+           <div>
+                <img src="assets/images/image 6.png" alt="IMG">
+                <h3>Web development</h3>
+                <p>Lorem ipsum dolor sit amedgt consectetur adipiscing elit. Nm est purus, consectetur sit amet odio sed, umcorper aliquet tortor</p>
+                <button class="btn">Ask A Question</button>
+            </div>
+            <div>
+                <img src="assets/images/image 7.png" alt="IMG">
+                <h3>Web development</h3>
+                <p>Lorem ipsum dolor sit amedgt consectetur adipiscing elit. Nm est purus, consectetur sit amet odio sed, umcorper aliquet tortor</p>
+                <button class="btn">Ask A Question</button>
+            </div>
+            <div>
+                <img src="assets/images/image 8.png" alt="IMG">
+                <h3>Android development</h3>
+                <p>Lorem ipsum dolor sit amedgt consectetur adipiscing elit. Nm est purus, consectetur sit amet odio sed, umcorper aliquet tortor</p>
+                <button class="btn">Ask A Question</button>
+            </div>
+       </ul>
+    </div>
+    <h4><a class="stor"><strong>Projects</strong></a> It's hopefully, a good one</h4>
+    <div>
+        <h4>This is our</h4>
+        <h2>Cool Bike Website</h2>
+        <p>An application that allows users to show case their bikes for sale and hire whenever they are having team bonding and any hiking activities.</p>
+        <button class="btn">Learn More</button>
+        <img src="assets/images/image 9.png" alt="IMG">
+    </div>
+    <div class="ld">
+        <h1 class="h2">Still not sure?</h1>
+        <p>Go ahead and <button class="btn">Enroll</button> <a class="con"> contact us</a></p>
     </div>
 </body>
 </html>
