Added the footer and designed it to fit the requirements given out for the task

--- a/index.html
+++ b/index.html
@@ -93,5 +93,8 @@
         <h1 class="h2">Still not sure?</h1>
         <p>Go ahead and <button class="btn">Enroll</button> <a class="con"> contact us</a></p>
     </div>
+    <footer>
+        <p>Designed with ❤️ by J&R</p>
+    </footer>      
 </body>
 </html>
