Added the overlay text on the images using <div> and classes to specify the css parameters

--- a/index.html
+++ b/index.html
@@ -8,13 +8,15 @@
     <link rel="stylesheet" type="text/css" href="./assets/css/style.css">
 </head>
 <body>
-    <div class="bar">
-        <a class="mor">Moringa</a> <a class="nav">School</a>
-        <a class="cour">Courses</a>
-        <a class="cour">Our Projects</a>
-        <a class="cour">Stories</a>
-        <button class="btn">Enroll</button>
-    </div>
+    <header>
+        <div class="bar">
+            <a class="mor">Moringa</a> <a class="nav">School</a>
+            <a class="cour">Courses</a>
+            <a class="cour">Our Projects</a>
+            <a class="cour">Stories</a>
+            <button class="btn">Enroll</button>
+        </div>
+    </header>
     <div class="p1">
         <h2>Moringa</h2>
         <h1>Nurturing Africa's tech Talent</h1>
@@ -33,7 +35,15 @@
             Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nam est purus, consectetur sit frin bot
             <button class="btn">See Album</button>
         </p>
-        <img class="img1" src="assets/images/image 2.png" alt="IMG">
+        <div class="img">
+            <img src="assets/images/image 2.png" alt="IMG">
+            <h4 class="ck">
+                @23 September, 2021.
+            </h4>
+            <h3 class="top">
+                #1
+            </h3>
+        </div>
     </div>
     <div>
         <h1>Board Meeting</h1>
@@ -41,11 +51,27 @@
             Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nam est purus, consectetur sit frin bot
             <button class="btn">Read our stories</button>
         </p>
-        <img class="img1" src="assets/images/image 3.png" alt="IMG">
+        <div class="img">
+            <img src="assets/images/image 3.png" alt="IMG">
+            <h4 class="img3">
+                @31 October, 2021.
+            </h4>
+            <h3 class="tl">
+                #2
+            </h3>
+        </div>
     </div>
     <br>
     <div>
-        <img class="img1" src="assets/images/image 4.png" alt="IMG">
+        <div class="img">
+            <img src="assets/images/image 4.png" alt="IMG">
+            <h4 class="ck">
+                @23 June, 2022.
+            </h4>
+            <h3 class="top">
+                #3
+            </h3>
+        </div>
         <h1>Graduation Party</h1>
         <p>
             Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nam est purus, consectetur sit frin bot
@@ -56,25 +82,46 @@
     <div>
        <ul>
            <div>
-               <img src="assets/images/image 5.png" alt="IMG">
+            <div class="img">
+                <img src="assets/images/image 5.png" alt="IMG">
+                <h4 class="ck">
+                    Rose Oketch
+                </h4>
+            </div>
                <h3>Web development</h3>
                <p>Lorem ipsum dolor sit amedgt consectetur adipiscing elit. Nm est purus, consectetur sit amet odio sed, umcorper aliquet tortor</p>
                <button class="btn">Ask A Question</button>
            </div>
            <div>
+            <div class="img">
                 <img src="assets/images/image 6.png" alt="IMG">
+                <h4 class="ck">
+                    Albert Bryone
+                </h4>
+            </div>
                 <h3>Web development</h3>
                 <p>Lorem ipsum dolor sit amedgt consectetur adipiscing elit. Nm est purus, consectetur sit amet odio sed, umcorper aliquet tortor</p>
                 <button class="btn">Ask A Question</button>
             </div>
             <div>
-                <img src="assets/images/image 7.png" alt="IMG">
+                <div class="img">
+                    <img src="assets/images/image 7.png" alt="IMG">
+                    <h4 class="ck">
+                        Raphael Katana
+                    </h4>
+                </div>
                 <h3>Web development</h3>
                 <p>Lorem ipsum dolor sit amedgt consectetur adipiscing elit. Nm est purus, consectetur sit amet odio sed, umcorper aliquet tortor</p>
                 <button class="btn">Ask A Question</button>
             </div>
             <div>
-                <img src="assets/images/image 8.png" alt="IMG">
+                <div class="img">
+                    <img src="assets/images/image 8.png" alt="IMG">
+                    <h4 class="ck">
+                        Christine Karimi
+                    </h4>
+                </div>
+                
                 <h3>Android development</h3>
                 <p>Lorem ipsum dolor sit amedgt consectetur adipiscing elit. Nm est purus, consectetur sit amet odio sed, umcorper aliquet tortor</p>
                 <button class="btn">Ask A Question</button>
