Designed the buttons and the font color fot the colored text of the website

--- a/index.html
+++ b/index.html
@@ -18,12 +18,13 @@
         </div>
     </header>
     <div class="p1">
-        <h2>Moringa</h2>
-        <h1>Nurturing Africa's tech Talent</h1>
-        <p>Through market aligned skils training, we help learners build new career possibilities with greater confidence and capability 
+        <h3>Moringa</h3>
+        <h1 class="nurture">Nurturing Africa's Tech Talent</h1>
+        <div>
+            <p class="p1">Through market aligned skills training, we help learners build new career possibilities with greater confidence and capability</p>
             <button class="btn">Enroll Now</button>
-            <button class="btn">Explore</button>
-        </p>
+            <button class="btne">Explore</button>
+        </div>
         <img class="img1" src="assets/images/image1.png" alt="IMG">
         <br>
     </div>
@@ -31,7 +32,7 @@
     <h4><a class="stor"><strong>Stories</strong></a> So many memories</h4>
     <div>
         <h1>Orientation day</h1>
-        <p>
+        <p class="p1">
             Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nam est purus, consectetur sit frin bot
             <button class="btn">See Album</button>
         </p>
@@ -47,10 +48,10 @@
     </div>
     <div>
         <h1>Board Meeting</h1>
-        <p>
+        <p class="p1">
             Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nam est purus, consectetur sit frin bot
-            <button class="btn">Read our stories</button>
         </p>
+        <button class="btn">Read our stories</button>
         <div class="img">
             <img src="assets/images/image 3.png" alt="IMG">
             <h4 class="img3">
@@ -73,10 +74,10 @@
             </h3>
         </div>
         <h1>Graduation Party</h1>
-        <p>
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nam est purus, consectetur sit frin bot
-            <button class="btn">See Album</button>
+        <p class="p1">
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nam est purus, consectetur sit frin bot.
         </p>
+        <button class="btn">See Album</button>
     </div>
     <h4><a class="stor"><strong>Technical Mentors</strong></a> Skilled, and kind</h4>
     <div>
@@ -88,8 +89,8 @@
                     Rose Oketch
                 </h4>
             </div>
-               <h3>Web development</h3>
-               <p>Lorem ipsum dolor sit amedgt consectetur adipiscing elit. Nm est purus, consectetur sit amet odio sed, umcorper aliquet tortor</p>
+               <h3 class="web">Web development</h3>
+               <p class="tm">Lorem ipsum dolor sit amedgt consectetur adipiscing elit. Nm est purus, consectetur sit amet odio sed, umcorper aliquet tortor</p>
                <button class="btn">Ask A Question</button>
            </div>
            <div>
@@ -99,8 +100,8 @@
                     Albert Bryone
                 </h4>
             </div>
-                <h3>Web development</h3>
-                <p>Lorem ipsum dolor sit amedgt consectetur adipiscing elit. Nm est purus, consectetur sit amet odio sed, umcorper aliquet tortor</p>
+                <h3 class="web">Web development</h3>
+                <p class="tm">Lorem ipsum dolor sit amedgt consectetur adipiscing elit. Nm est purus, consectetur sit amet odio sed, umcorper aliquet tortor</p>
                 <button class="btn">Ask A Question</button>
             </div>
             <div>
@@ -110,8 +111,8 @@
                         Raphael Katana
                     </h4>
                 </div>
-                <h3>Web development</h3>
-                <p>Lorem ipsum dolor sit amedgt consectetur adipiscing elit. Nm est purus, consectetur sit amet odio sed, umcorper aliquet tortor</p>
+                <h3 class="web">Web development</h3>
+                <p class="tm">Lorem ipsum dolor sit amedgt consectetur adipiscing elit. Nm est purus, consectetur sit amet odio sed, umcorper aliquet tortor</p>
                 <button class="btn">Ask A Question</button>
             </div>
             <div>
@@ -122,8 +123,8 @@
                     </h4>
                 </div>
                 
-                <h3>Android development</h3>
-                <p>Lorem ipsum dolor sit amedgt consectetur adipiscing elit. Nm est purus, consectetur sit amet odio sed, umcorper aliquet tortor</p>
+                <h3 class="web">Android development</h3>
+                <p class="tm">Lorem ipsum dolor sit amedgt consectetur adipiscing elit. Nm est purus, consectetur sit amet odio sed, umcorper aliquet tortor</p>
                 <button class="btn">Ask A Question</button>
             </div>
        </ul>
