Designed and modified the TMs section to column cards for easy read through

--- a/index.html
+++ b/index.html
@@ -79,32 +79,39 @@
         </p>
         <button class="btn">See Album</button>
     </div>
+
+
+    /* TM */
     <h4><a class="stor"><strong>Technical Mentors</strong></a> Skilled, and kind</h4>
-    <div>
-       <ul>
-           <div>
-            <div class="img">
-                <img src="assets/images/image 5.png" alt="IMG">
-                <h4 class="ck">
-                    Rose Oketch
-                </h4>
-            </div>
-               <h3 class="web">Web development</h3>
-               <p class="tm">Lorem ipsum dolor sit amedgt consectetur adipiscing elit. Nm est purus, consectetur sit amet odio sed, umcorper aliquet tortor</p>
-               <button class="btn">Ask A Question</button>
-           </div>
-           <div>
-            <div class="img">
-                <img src="assets/images/image 6.png" alt="IMG">
-                <h4 class="ck">
-                    Albert Bryone
-                </h4>
-            </div>
+    <div class="row">
+        <div class="column">
+            <div class="card">
+                <div class="img">
+                    <img src="assets/images/image 5.png" alt="IMG">
+                    <h4 class="ck">
+                        Rose Oketch
+                    </h4>
+                </div>
                 <h3 class="web">Web development</h3>
                 <p class="tm">Lorem ipsum dolor sit amedgt consectetur adipiscing elit. Nm est purus, consectetur sit amet odio sed, umcorper aliquet tortor</p>
                 <button class="btn">Ask A Question</button>
             </div>
-            <div>
+        </div>
+        <div class="column">
+            <div class="card">
+                <div class="img">
+                    <img src="assets/images/image 6.png" alt="IMG">
+                    <h4 class="ck">
+                        Albert Bryone
+                    </h4>
+                </div>
+                <h3 class="web">Web development</h3>
+                <p class="tm">Lorem ipsum dolor sit amedgt consectetur adipiscing elit. Nm est purus, consectetur sit amet odio sed, umcorper aliquet tortor</p>
+                <button class="btn">Ask A Question</button>
+            </div>
+        </div>
+        <div class="column">
+            <div class="card">
                 <div class="img">
                     <img src="assets/images/image 7.png" alt="IMG">
                     <h4 class="ck">
@@ -115,7 +122,9 @@
                 <p class="tm">Lorem ipsum dolor sit amedgt consectetur adipiscing elit. Nm est purus, consectetur sit amet odio sed, umcorper aliquet tortor</p>
                 <button class="btn">Ask A Question</button>
             </div>
-            <div>
+        </div>
+        <div class="column">
+            <div class="card">
                 <div class="img">
                     <img src="assets/images/image 8.png" alt="IMG">
                     <h4 class="ck">
@@ -127,15 +136,18 @@
                 <p class="tm">Lorem ipsum dolor sit amedgt consectetur adipiscing elit. Nm est purus, consectetur sit amet odio sed, umcorper aliquet tortor</p>
                 <button class="btn">Ask A Question</button>
             </div>
-       </ul>
+        </div>
     </div>
+    <br>
+    <br>
+    <br>
     <h4><a class="stor"><strong>Projects</strong></a> It's hopefully, a good one</h4>
     <div>
-        <h4>This is our</h4>
-        <h2>Cool Bike Website</h2>
-        <p>An application that allows users to show case their bikes for sale and hire whenever they are having team bonding and any hiking activities.</p>
+        <h3>This is our</h3>
+        <h1 class="webb">Cool Bike Website</h1>
+        <p class="p1">An application that allows users to show case their bikes for sale and hire whenever they are having team bonding and any hiking activities.</p>
         <button class="btn">Learn More</button>
-        <img src="assets/images/image 9.png" alt="IMG">
+        <img class="img" src="assets/images/image 9.png" alt="IMG">
     </div>
     <div class="ld">
         <h1 class="h2">Still not sure?</h1>
