Designed the first image of the website

--- a/index.html
+++ b/index.html
@@ -18,16 +18,26 @@
         </div>
     </header>
     <div class="p1">
-        <h3>Moringa</h3>
-        <h1 class="nurture">Nurturing Africa's Tech Talent</h1>
-        <div>
-            <p class="p1">Through market aligned skills training, we help learners build new career possibilities with greater confidence and capability</p>
-            <button class="btn">Enroll Now</button>
-            <button class="btne">Explore</button>
-        </div>
-        <img class="img1" src="assets/images/image1.png" alt="IMG">
-        <br>
+        <p class="p1">
+            <img class="img1" src="assets/images/image1.png" alt="IMG">
+            <h3>Moringa</h3>
+            <h1 class="nurture">Nurturing Africa's Tech Talent</h1>
+            <div>
+                Through market aligned skills training, we help learners build new career possibilities with greater confidence and capability.
+                <br>
+                <br>
+                <button class="btn">Enroll Now</button>
+                <button class="btne">Explore</button>
+            </div>
+        </p>
     </div>
+
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
     
     <h4><a class="stor"><strong>Stories</strong></a> So many memories</h4>
     <div>
