Changed the position of the images under the stories page

--- a/index.html
+++ b/index.html
@@ -40,63 +40,87 @@
     <br>
     
     <h4><a class="stor"><strong>Stories</strong></a> So many memories</h4>
-    <div>
-        <h1>Orientation day</h1>
+    <div class="p1">
         <p class="p1">
+            <div class="gfg">
+                <img class="img2" src="assets/images/image 2.png" alt="IMG">
+                <h4 class="cl">
+                    @23 September, 2021.
+                </h4>
+                <h3 class="top">
+                    #1
+                </h3>
+            </div>
+            <h1>Orientation day</h1>
             Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nam est purus, consectetur sit frin bot
+            <br>
+            <br>
             <button class="btn">See Album</button>
         </p>
-        <div class="img">
-            <img src="assets/images/image 2.png" alt="IMG">
-            <h4 class="ck">
-                @23 September, 2021.
-            </h4>
-            <h3 class="top">
-                #1
-            </h3>
-        </div>
-    </div>
-    <div>
-        <h1>Board Meeting</h1>
-        <p class="p1">
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nam est purus, consectetur sit frin bot
-        </p>
-        <button class="btn">Read our stories</button>
-        <div class="img">
-            <img src="assets/images/image 3.png" alt="IMG">
-            <h4 class="img3">
-                @31 October, 2021.
-            </h4>
-            <h3 class="tl">
-                #2
-            </h3>
-        </div>
+        
     </div>
     <br>
-    <div>
-        <div class="img">
-            <img src="assets/images/image 4.png" alt="IMG">
-            <h4 class="ck">
-                @23 June, 2022.
-            </h4>
-            <h3 class="top">
-                #3
-            </h3>
-        </div>
-        <h1>Graduation Party</h1>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <div class="p1">
         <p class="p1">
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nam est purus, consectetur sit frin bot.
+            <div class="gfg">
+                <img class="img3" src="assets/images/image 3.png" alt="IMG">
+                <h4 class="bm">
+                    @31 October, 2021.
+                </h4>
+                <h3 class="tl">
+                    #2
+                </h3>
+            </div>
+            <h1>Board Meeting</h1>
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nam est purus, consectetur sit frin bot
         </p>
-        <button class="btn">See Album</button>
+        <button class="btn">Read our stories</button>   
+    </div>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <div class="p1">
+        <p class="p1">
+            <div class="gfg">
+                <img class="img4" src="assets/images/image 4.png" alt="IMG">
+                <h4 class="cl">
+                    @23 June, 2022.
+                </h4>
+                <h3 class="top">
+                    #3
+                </h3>
+            </div>
+            <h1>Graduation Party</h1>
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nam est purus, consectetur sit frin bot.
+            <button class="btn">See Album</button>
+        </p>
     </div>
 
-
-    /* TM */
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br> <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
     <h4><a class="stor"><strong>Technical Mentors</strong></a> Skilled, and kind</h4>
     <div class="row">
         <div class="column">
             <div class="card">
-                <div class="img">
+                <div class="imgtm">
                     <img src="assets/images/image 5.png" alt="IMG">
                     <h4 class="ck">
                         Rose Oketch
@@ -109,7 +133,7 @@
         </div>
         <div class="column">
             <div class="card">
-                <div class="img">
+                <div class="imgtm">
                     <img src="assets/images/image 6.png" alt="IMG">
                     <h4 class="ck">
                         Albert Bryone
@@ -122,7 +146,7 @@
         </div>
         <div class="column">
             <div class="card">
-                <div class="img">
+                <div class="imgtm">
                     <img src="assets/images/image 7.png" alt="IMG">
                     <h4 class="ck">
                         Raphael Katana
@@ -135,7 +159,7 @@
         </div>
         <div class="column">
             <div class="card">
-                <div class="img">
+                <div class="imgtm">
                     <img src="assets/images/image 8.png" alt="IMG">
                     <h4 class="ck">
                         Christine Karimi
@@ -148,6 +172,12 @@
             </div>
         </div>
     </div>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
     <br>
     <br>
     <br>
