made changes to the design of the project page

--- a/index.html
+++ b/index.html
@@ -78,8 +78,10 @@
             </div>
             <h1>Board Meeting</h1>
             Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nam est purus, consectetur sit frin bot
-        </p>
-        <button class="btn">Read our stories</button>   
+            <br>
+            <br>
+            <button class="btn">Read our stories</button> 
+        </p>  
     </div>
     <br>
     <br>
@@ -101,6 +103,8 @@
             </div>
             <h1>Graduation Party</h1>
             Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nam est purus, consectetur sit frin bot.
+            <br>
+            <br>
             <button class="btn">See Album</button>
         </p>
     </div>
@@ -120,8 +124,8 @@
     <div class="row">
         <div class="column">
             <div class="card">
-                <div class="imgtm">
-                    <img src="assets/images/image 5.png" alt="IMG">
+                <div class="gfg">
+                    <img class="img8" src="assets/images/image 5.png" alt="IMG">
                     <h4 class="ck">
                         Rose Oketch
                     </h4>
@@ -133,8 +137,8 @@
         </div>
         <div class="column">
             <div class="card">
-                <div class="imgtm">
-                    <img src="assets/images/image 6.png" alt="IMG">
+                <div class="gfg">
+                    <img class="img8" src="assets/images/image 6.png" alt="IMG">
                     <h4 class="ck">
                         Albert Bryone
                     </h4>
@@ -146,8 +150,8 @@
         </div>
         <div class="column">
             <div class="card">
-                <div class="imgtm">
-                    <img src="assets/images/image 7.png" alt="IMG">
+                <div class="gfg">
+                    <img class="img8" src="assets/images/image 7.png" alt="IMG">
                     <h4 class="ck">
                         Raphael Katana
                     </h4>
@@ -159,8 +163,8 @@
         </div>
         <div class="column">
             <div class="card">
-                <div class="imgtm">
-                    <img src="assets/images/image 8.png" alt="IMG">
+                <div class="gfg">
+                    <img class="img8" src="assets/images/image 8.png" alt="IMG">
                     <h4 class="ck">
                         Christine Karimi
                     </h4>
@@ -182,17 +186,31 @@
     <br>
     <br>
     <h4><a class="stor"><strong>Projects</strong></a> It's hopefully, a good one</h4>
-    <div>
-        <h3>This is our</h3>
-        <h1 class="webb">Cool Bike Website</h1>
-        <p class="p1">An application that allows users to show case their bikes for sale and hire whenever they are having team bonding and any hiking activities.</p>
-        <button class="btn">Learn More</button>
-        <img class="img" src="assets/images/image 9.png" alt="IMG">
+    <div class="p1">
+        <p>
+            <div clas="gfg">
+                <img class="img9" src="assets/images/image 9.png" alt="IMG">
+            </div>
+            <h3>This is our</h3>
+            <h1 class="webb">Cool Bike Website</h1>
+            An application that allows users to show case their bikes for sale and hire whenever they are having team bonding and any hiking activities.
+            <br>
+            <br>
+            <button class="btn">Learn More</button>
+        </p>
     </div>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
     <div class="ld">
         <h1 class="h2">Still not sure?</h1>
         <p>Go ahead and <button class="btn">Enroll</button> <a class="con"> contact us</a></p>
     </div>
+    <br>
+    <br>
+    <br>
     <footer>
         <p>Designed with ❤️ by J&R</p>
     </footer>      
