designed the Enroll button to the right hand side of the Nav Bar

--- a/index.html
+++ b/index.html
@@ -10,13 +10,19 @@
 <body>
     <header>
         <div class="bar">
-            <a class="mor">Moringa</a> <a class="nav">School</a>
-            <a class="cour">Courses</a>
-            <a class="cour">Our Projects</a>
-            <a class="cour">Stories</a>
-            <button class="btn">Enroll</button>
+            <ul>
+                <li><a class="mor">Moringa</a> <a class="nav">School</a></li>
+                <li><a class="cour">Courses</a></li>
+                <li><a class="cour">Our Projects</a></li>
+                <li><a class="cour">Stories</a></li>
+                <li style="float:right" ><button class="btn">Enroll</button></li>
+            </ul>
         </div>
     </header>
+    <br>
+    <br>
+    <br>
+    <br>
     <div class="p1">
         <p class="p1">
             <img class="img1" src="assets/images/image1.png" alt="IMG">
@@ -185,7 +191,7 @@
     <br>
     <br>
     <br>
-    <h4><a class="stor"><strong>Projects</strong></a> It's hopefully, a good one</h4>
+    <p><a class="stor"><strong>Projects</strong></a> It's hopefully, a good one</p>
     <div class="p1">
         <p>
             <div clas="gfg">
