added description of the website landing page to README.md file

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <p class="p1">
             <img class="img1" src="assets/images/image1.png" alt="IMG">
             <h3>Moringa</h3>
-            <h1 class="nurture">Nurturing Africa's Tech Talent</h1>
+            <h2 class="nurture">Nurturing Africa's Tech Talent</h2>
             <div>
                 Through market aligned skills training, we help learners build new career possibilities with greater confidence and capability.
                 <br>
@@ -57,7 +57,7 @@
                     #1
                 </h3>
             </div>
-            <h1>Orientation day</h1>
+            <h2>Orientation day</h2>
             Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nam est purus, consectetur sit frin bot
             <br>
             <br>
@@ -82,7 +82,7 @@
                     #2
                 </h3>
             </div>
-            <h1>Board Meeting</h1>
+            <h2>Board Meeting</h2>
             Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nam est purus, consectetur sit frin bot
             <br>
             <br>
@@ -107,7 +107,7 @@
                     #3
                 </h3>
             </div>
-            <h1>Graduation Party</h1>
+            <h2>Graduation Party</h2>
             Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nam est purus, consectetur sit frin bot.
             <br>
             <br>
@@ -126,7 +126,7 @@
     <br>
     <br>
     <br>
-    <h4><a class="stor"><strong>Technical Mentors</strong></a> Skilled, and kind</h4>
+    <p><a class="stor"><strong>Technical Mentors</strong></a> Skilled, and kind</p>
     <div class="row">
         <div class="column">
             <div class="card">
@@ -194,7 +194,7 @@
     <p><a class="stor"><strong>Projects</strong></a> It's hopefully, a good one</p>
     <div class="p1">
         <p>
-            <div clas="gfg">
+            <div class="gfg">
                 <img class="img9" src="assets/images/image 9.png" alt="IMG">
             </div>
             <h3>This is our</h3>
